--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+
+    <color name="color_white">#FFFFFF</color>
+    <color name="color_white_50">#80FFFFFF</color>
+    <color name="color_white_12">#1FFFFFFF</color>
+    <color name="color_white_18">#2EFFFFFF</color>
 </resources>
