--- a/app/src/main/res/layout/dialog_treasure_box.xml
+++ b/app/src/main/res/layout/dialog_treasure_box.xml
@@ -38,6 +38,7 @@
         android:layout_marginBottom="-90dp"
         android:layout_above="@+id/rl_box">
         <ImageView
+            android:id="@+id/iv_box_level_bg"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
@@ -47,6 +48,8 @@
             android:id="@+id/iv_box_level"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="30dp"
+            android:layout_alignBottom="@+id/iv_box_level_bg"
             android:layout_centerHorizontal="true"
             android:src="@drawable/icon_dialog_box_level_1">
         </ImageView>
