--- a/app/src/main/res/layout/fragment_box_level.xml
+++ b/app/src/main/res/layout/fragment_box_level.xml
@@ -113,7 +113,7 @@
         android:id="@+id/tv_box_current"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="30dp"
+        android:layout_marginLeft="24dp"
         android:layout_below="@+id/ll_box_level"
         android:textSize="12sp"
         android:text="@string/str_Current"
@@ -125,7 +125,7 @@
         android:id="@+id/pb_box"
         android:layout_width="match_parent"
         android:layout_height="25dp"
-        android:layout_marginLeft="30dp"
+        android:layout_marginLeft="24dp"
         android:layout_marginRight="28dp"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_below="@+id/tv_box_current">
@@ -135,7 +135,7 @@
         android:id="@+id/tv_box_prize"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="30dp"
+        android:layout_marginLeft="24dp"
         android:layout_below="@+id/pb_box"
         android:textSize="12sp"
         android:text="@string/str_Prize"
@@ -148,10 +148,9 @@
         android:id="@+id/rl_box_gift"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="30dp"
+        android:gravity="center_horizontal"
         android:layout_marginTop="10dp"
         android:layout_below="@+id/tv_box_prize">
-
 
         <RelativeLayout
             android:id="@+id/rl_box_gift_1"
