--- a/app/src/main/res/layout/fragment_box_level.xml
+++ b/app/src/main/res/layout/fragment_box_level.xml
@@ -9,17 +9,19 @@
         android:id="@+id/ll_box_level"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="14dp"
+        android:layout_marginRight="14dp"
         android:orientation="horizontal">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="54dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1">
 
             <Button
                 android:id="@+id/btn_box_level_1"
-                android:layout_width="48dp"
-                android:layout_height="30dp"
+                android:layout_width="46dp"
+                android:layout_height="28dp"
                 android:layout_centerInParent="true"
                 android:textSize="12sp"
                 android:textColor="@color/color_white"
@@ -32,13 +34,13 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="54dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1">
 
             <Button
                 android:id="@+id/btn_box_level_2"
-                android:layout_width="48dp"
-                android:layout_height="30dp"
+                android:layout_width="46dp"
+                android:layout_height="28dp"
                 android:textSize="12sp"
                 android:textColor="@color/color_white_50"
                 android:text="@string/str_box_level_2"
@@ -51,13 +53,13 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="54dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1">
 
             <Button
                 android:id="@+id/btn_box_level_3"
-                android:layout_width="48dp"
-                android:layout_height="30dp"
+                android:layout_width="46dp"
+                android:layout_height="28dp"
                 android:textSize="12sp"
                 android:textColor="@color/color_white_50"
                 android:text="@string/str_box_level_3"
@@ -70,13 +72,13 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="54dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1">
 
             <Button
                 android:id="@+id/btn_box_level_4"
-                android:layout_width="48dp"
-                android:layout_height="30dp"
+                android:layout_width="46dp"
+                android:layout_height="28dp"
                 android:textSize="12sp"
                 android:textColor="@color/color_white_50"
                 android:text="@string/str_box_level_4"
@@ -89,13 +91,13 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="54dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1">
 
             <Button
                 android:id="@+id/btn_box_level_5"
-                android:layout_width="48dp"
-                android:layout_height="30dp"
+                android:layout_width="46dp"
+                android:layout_height="28dp"
                 android:textSize="12sp"
                 android:textColor="@color/color_white_50"
                 android:text="@string/str_box_level_5"
@@ -114,6 +116,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="24dp"
+        android:layout_marginTop="16dp"
         android:layout_below="@+id/ll_box_level"
         android:textSize="12sp"
         android:text="@string/str_Current"
@@ -121,28 +124,12 @@
 
     </TextView>
 
-    <RelativeLayout
+
+    <com.example.zhuzhu.customview.RLProgressBar
         android:id="@+id/rl_pb"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_below="@+id/tv_box_current">
-
-        <SeekBar
-            android:id="@+id/pb_box"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            style="?android:attr/progressBarStyleHorizontal"
-            android:progress="50"
-            android:max="100"
-            android:progressDrawable="@drawable/dialog_box_progressbar_bg"
-            android:layout_centerInParent="true">
-        </SeekBar>
-
-
-    </RelativeLayout>
-
+        android:layout_height="54dp"
+        android:layout_below="@+id/tv_box_current"/>
 
     <TextView
         android:id="@+id/tv_box_prize"
@@ -390,21 +377,27 @@
 
     </RelativeLayout>
 
-    <TextView
-        android:id="@+id/tv_box_send"
-        android:layout_width="wrap_content"
-        android:layout_height="60dp"
-        android:layout_alignParentBottom="true"
-        android:gravity="center"
-        android:textSize="12sp"
-        android:drawablePadding="6dp"
-        android:drawableLeft="@drawable/icon_box_send_left"
-        android:drawableRight="@drawable/icon_box_send_right"
-        android:layout_centerHorizontal="true"
-        android:text="@string/str_box_send"
-        android:textColor="@color/color_white">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="58dp"
+        android:background="@drawable/share_dialog_box_bottom_bg"
+        android:layout_alignParentBottom="true">
 
-    </TextView>
+        <TextView
+            android:id="@+id/tv_box_send"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:textSize="12sp"
+            android:drawablePadding="6dp"
+            android:drawableLeft="@drawable/icon_box_send_left"
+            android:drawableRight="@drawable/icon_box_send_right"
+            android:layout_centerHorizontal="true"
+            android:text="@string/str_box_send"
+            android:textColor="@color/color_white">
 
+        </TextView>
+
+    </RelativeLayout>
 
 </RelativeLayout>
